# ZenTech-AI

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  main.py  pyproject.toml  test_main.http
app/: __init__.py  config.py
app/api/: routes.py
app/core/: logging_utils.py
app/prompts/: admin_activity_timeline_prompt.py  admin_chat_prompt.py  admin_incidents_prompt.py  admin_logs_prompt.py  agent_prompt.py  chat_prompt.py  inventory_management_prompt.py  management_impact_analysis_prompt.py  management_reports_prompt.py
app/schemas/: admin_activity_timeline.py  admin_chat.py  admin_incidents.py  admin_logs.py  agent.py  chat.py  inventory_management.py  management_impact_analysis.py  management_reports.py  product.py  rag.py
app/services/: admin_activity_timeline_service.py  admin_chat_service.py  admin_incidents_service.py  admin_logs_service.py  agent_service.py  chat_service.py  context_router.py  db_tool_client.py  document_ingest_service.py  embedding_service.py  image_analysis_service.py  inventory_management_service.py  knowledge_search_service.py  management_impact_analysis_service.py  management_reports_service.py  openai_client.py  product_search_service.py  qdrant_client.py  qdrant_tools.py  tool_orchestrator.py
app/utils/: chat_roles.py  code_reader.py  document_text.py
docs/: AI_SYSTEM_DOCUMENTATION.md
scripts/: test_azure_model.py  test_embedding_model.py  test_qdrant.py
tests/: test_agent_recommendations.py  test_chat_prompt.py  test_personal_lookup_orchestrator.py  test_personal_lookup_routing.py  test_product_candidate_filter.py
