[project]
name = "ai"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langgraph>=1.2.2",
    "openai>=2.38.0",
    "pypdf>=6.4.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.48.0",
]
